added: api updates whatever

--- a/api/vehicle-tire-recommendation/models/vehicle-tire-recommendation.settings.json
+++ b/api/vehicle-tire-recommendation/models/vehicle-tire-recommendation.settings.json
@@ -2,7 +2,7 @@
   "kind": "collectionType",
   "collectionName": "vehicle_tire_recommendations",
   "info": {
-    "name": "VehicleTireRecommendation",
+    "name": "Tire List",
     "description": ""
   },
   "options": {
